Update Spring Boot projects with enhancements and new README
- Update launch configuration for improved debugging experience.
- Add README.md with project documentation.
- Refine exception handling in Spring Data JPA exception handler project.
- Update Maven project files (pom.xml) across multiple projects for dependency management.
- Implement enhancements in User and Usuario models.
- Modify UserRepository and UsuarioRepository with new methods.
- Adjust application properties for dio-spring-data-jpa and spring-configuration-properties projects.
- Update SistemaMensagem classes in spring-properties-value and spring-scopes-singleton-prototype projects for message handling improvements.
- Revise Swagger configuration and controllers in springboot-web-swagger project for enhanced API documentation.
- Update springboot-web project with modifications in controller and repository layers for better data handling.